<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/settings7">

        <ListPreference
            android:entries="@array/videoEncoderArray"
            android:entryValues="@array/videoEncoderValues"
            android:key="video_encoder"
            android:summary="@string/settings10"
            android:title="@string/settings9" />
        <ListPreference
            android:entries="@array/videoResolutionArray"
            android:entryValues="@array/videoResolutionArray"
            android:key="video_resolution"
            android:title="@string/settings11" />
        <ListPreference
            android:entries="@array/videoFramerateArray"
            android:entryValues="@array/videoFramerateValues"
            android:key="video_framerate"
            android:title="@string/settings12" />
        <ListPreference
            android:entries="@array/videoBitrateArray"
            android:entryValues="@array/videoBitrateValues"
            android:key="video_bitrate"
            android:title="@string/settings13" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings28" >           
        <EditTextPreference
            android:defaultValue="8554"
            android:inputType="number"
            android:key="rtsp_port"
            android:summary="@string/settings32"
            android:title="@string/settings31" />      
    </PreferenceCategory>    
    


</PreferenceScreen>